--- a/Exercise_Wed 4.1/index.html
+++ b/Exercise_Wed 4.1/index.html
@@ -39,5 +39,26 @@ Draw A home Clip Art using SVG tags
         Due date is Monday 28 September!
     </emps>
 </p>
+
+    <svg width="800" height="500" >
+
+        <rect id="house_main_entrance" fill="#8C5E58" width="250" height="210" x="280" y="170"></rect>
+        <polygon id="house_main_roof" fill="black" points="235,170 400,10 570,170"></polygon>
+        <rect id="house_main_door" fill="black" width="50" height="100" x="375" y="280"></rect>
+        <path id="house_arc" d="M375,280 A10,20 0 0,1 425,280" style="stroke:white; fill:none;"></path>
+        <circle id="house_maindoor_nob" cx="378" cy="330" r="2" fill="pink"></circle>
+        <rect id="house_maindoor_window" x="300" y="190" width="30" height="30" fill="steelBlue"></rect>
+        <rect id="house_maindoor_window" x="335" y="190" width="30" height="30" fill="steelBlue"></rect>
+        <rect id="house_maindoor_window" x="300" y="225" width="30" height="30" fill="steelBlue"></rect>
+        <rect id="house_maindoor_window" x="335" y="225" width="30" height="30" fill="steelBlue"></rect>
+        <circle id="sun" cx="700" cy="50" r="50" fill="#FCD440"></circle>
+        <rect id="greenary" width="800" height="180" fill="green" x="0" y="380"></rect>
+        <rect id="house_window_border" width="5" height="65" x="300" y="190" fill="white"></rect>
+        <rect id="house_window_border" width="5" height="65" x="330" y="190" fill="white"></rect>
+        <rect id="house_window_border" width="5" height="65" x="360" y="190" fill="white"></rect>
+        <rect id="house_window_border" width="65" height="5" x="300" y="190" fill="white"></rect>
+        <rect id="house_window_border" width="60" height="5" x="305" y="220" fill="white"></rect>
+        <rect id="house_window_border" width="60" height="5" x="305" y="250" fill="white"></rect>
+    </svg>
 </body>
 </html>
